add install fitur
