# controllers/publisherController.go
@@ -8,11 +8,6 @@ import (
 	"gorm.io/gorm"
 )
 
-type PublisherInput struct {
-	Name        string `json:"name"`
-	ImageURL	string `json:"image_url"`
-}
-
 // Get All Publisher godoc
 // @Summary Get all publisher
 // @Description Get list of publisher
